tests/fixtures/invalid/min_no_args.py
# min() requires at least 1 argument
x = min()
